2000-10-28  Mo DeJong  <mdejong@redhat.com>

	* src/Makefile.am: Remove commented out bits.

2000-10-18  Mo DeJong  <mdejong@redhat.com>

	* src/incrmnt.cpp (Control::IncrementalRecompilation):
	Rewrite incremental compile loop so that only a single
	character at a time is read.

2000-10-14  Mo DeJong  <mdejong@redhat.com>

	* src/lookup.cpp: Remove #ifdef JIKES_DEBUG
	blocks from around blocks of code to free memory.

2000-10-14  Mo DeJong  <mdejong@redhat.com>

	* src/jikesapi.cpp (compile): Minor code
	reformat. Allocate a control instance on
	the stack instead of the heap.
	* src/jikesapi.h: Minor code reformat.

2000-10-09  Mo DeJong  <mdejong@redhat.com>

	* acinclude.m4: Include iconv macro file.
	* configure.in: Move iconv related tests to AC_CHECK_ICONV.
	* src/stream.cpp (ProcessInputUnicode): Cast the 2nd argument
	to iconv to a non const if the compiler would generate an error.
	* src/m4/ac_check_iconv.m4: Add AC_CHECK_ICONV macro.

2000-09-11  Mo DeJong  <mdejong@redhat.com>

	* src/error.cpp (PrintUNREACHABLE_DEFAULT_CATCH_CLAUSE):
	Reword the error message, hopefully for the last time.

2000-08-23  Andrew G. Tereschenko  <tag@ibis.odessa.ua>

	* src/incrmnt.cpp (IncrementalRecompilation): Both
	'q' and 'Q' are now acceptable to quit incremental mode.

2000-08-21  Mo DeJong  <mdejong@redhat.com>

	* src/incrmnt.cpp (IncrementalRecompilation): Rewrite
	the user interaction loop for incremental re-compilation.
	We now look for the letter 'q', if that is what the user
	typed, we quit.

2000-08-21  Mo DeJong  <mdejong@redhat.com>

	* src/platform.h (Ostream::setf): Remove
	the setf method, it is not used anywhere
	and it causes the build to fail on the Mac.

2000-08-21  Mo DeJong  <mdejong@redhat.com>

	* src/error.cpp (PrintUNREACHABLE_DEFAULT_CATCH_CLAUSE):
	Reword warning for try block that catches Exception
	but does not contain a method that can raise a
	checked exception.

2000-08-13  Chris Abbey <cabbey@bresnanlink.net>
